DCOMDISDZ,COMDIS,PROPMOTDIS,ANGDIDIS,LUMDIS: Added equation of state w
               parameter for OmegaL.
DJS_PHOTFRAC: add documentation on /exact keyword, and report error in case
              of non-integer center given with /exact keyword set. also, 
              changed so it doesn't recenter on its own if /exact is set.
DPF_REJECT_CR: ???
EXACT_PHOTFRAC: fix bug involving calculation of annulus photometry
FIND: Need to index some loops with type LONG to allow for large
               numbers of stars.
FLEGENDRE: Removed from pro/trace directory, since that copy is meant
               to be identical to that in goddard/pro/math.
HOGG_ARROW: Hogg's version of plotting arrows (like DJS_ARROW), but with
               more options and working in device coordinates.
HOGG_BWIFY:  ???
HOGG_IAU_NAME: Clean-roomed adstring out.
HOGG_IMAGE_OVERLAY: Erase .ppm file when done.
HOGG_MEANPLOT, HOGG_WEIGHTED_MEAN_SURFACE: Added NEAREST option to smooth
               based upon the nearest N neighbors.
HOGG_MRDFITS,MWRFITS_CHUNKS: Declare all internal variables as long64,
               just to be sure that files larger than 2Gb will be handled
               correctly.
               Make robust to file not existing (return 0 instead of crashing).
HOGG_NAME2RADEC: New proc to convert IAU name in "J" format to RA,DEC (Hogg).
HOGG_OPLOT_COVAR: Add support for a vectorized THICK keyword.
HOGG_PLOTHIST: Change in behviour for setting X range when using /OVERPLOT.
HOGG_SCATTERPLOT: Added IOUTLIERS keyword, to plot the outliers differently.
LG_TO_HELIO: Inverse function to HELIO_TO_LG.
MRDFITS:       LONG64 stuff, handle degenerate excess NAXIS keywords
MWRFITS_CHUNKS: More bug fixes for appending to existing FITS binary
               tables for string-type elements.  Bug fix to allow appending
               string elements that are different lengths, though if the
               appended strings are longer then they get truncated.