@@ -940,6 +940,7 @@ pro/misc/hogg_name2radec.pro -text
 pro/misc/hogg_ned_name2radec.pro -text
 pro/misc/idlutils_so_ext.pro -text
 pro/misc/idlutils_version.pro -text
+pro/misc/labelloc.pro -text
 pro/misc/lookforgzip.pro -text
 pro/misc/make_html_help.pro -text
 pro/misc/read_tbl.pro -text
